add User entity

--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,11 @@
 			}
 			code {
 			  font-size: 80%;
-			}		
+			}	
+
+			/*
+			-------------------------------------------------------*/
+			.card-body {
+
+				paddig:0px;
+			}	
